<resources>
    <string name="app_name">迹伴</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">手机号码*</string>
    <string name="prompt_password">密码*</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_phone">手机号码格式不正确</string>
    <string name="error_invalid_password">密码至少6位,最多12位</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">此项必填</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="create_new_account">注册新账号</string>
    <string name="verify_code">验证码*</string>
    <string name="new_password">新密码*</string>
    <string name="request_verify_code">获取验证码</string>
    <string name="reset_password">重置密码</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="next_step">下一步</string>
    <string name="request">获取</string>
    <string name="set_password">设置密码*</string>
    <string name="input_nickname">输入昵称*</string>
    <string name="get_random">随机生成</string>
    <string name="action_sign_up">注册</string>
    <string name="pick_birthday">选择生日*</string>
    <string name="finish_sign_up">完成注册</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="agreement">我同意遵守\"迹伴用户协议\"</string>
    <string name="error_date_format">日期格式错误</string>
    <string name="please_agree">请选择同意</string>
    <string name="error_invalid_verify_code">验证码格式不正确</string>
    <string name="reset_password_ok">密码重置成功</string>
    <string name="error_verify_code">验证码错误</string>
    <string name="account_existed">账户已存在</string>
    <string name="error_invalid_nickname">昵称需要3-12个字符</string>
    <string name="error_invalid_birthday">出生日期有误</string>
    <string name="must_agree">请同意守则</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="footprint">足迹</string>
    <string name="nearby">迹伴</string>
    <string name="logout">注销</string>
    <string name="mine">我的</string>
    <string name="all">所有</string>
    <string name="i_send_a_mail_to">我寄了一封信给</string>
    <string name="send_a_mail_to_me">寄了一封信给我</string>
    <string name="i_reply_to_sb">我和%1$s回信了</string>
    <string name="sb_reply_to_me">%1$s给我回信了</string>
    <string name="i_follow_to_sb">我关注了%1$s%2$s</string>
    <string name="be_friend">, 并成为好友</string>
    <string name="sb_follow_to_me">%1$s关注了我%2$s</string>
    <string name="daily_report">今天我被%1$d人迹录了片刻, 迹录了%2$d次他人的片刻, 增加了%3$d个新粉丝</string>
    <string name="welcome">欢迎第一次来到迹伴</string>

</resources>
